
 * New conditions
 ** Instance Size
 ** Zone PvP Type
 
 * New icon type: All-Unit Buffs/Debuffs. This icon type is mainly useful for tracking your multidotting on targets which might not have a unitID that they can be tracked by in a normal Buff/Debuff icon.
 * New icon display method: Vertical Bars.
 * You can now set a rotation amount for a icon's text displays.
 * The suggestion list now defers its sorting so that input is more responsive.
 * The "Highlight timer edge" setting is back.
 * You can now export all your global groups at once.
 

====Bug Fixes====
 * Fixed yet another issue with ElvUI's timer texts (they weren't going away when they should have been).
 * A whole lot of other minor bugs have been fixed - too many to list here.


===v7.0.3===
 * Re-worked the Instance Type condition to make it more extensible in the future, and also added a few missing instance types to it.
 * Added a Unit Specialization condition that can check the specs of enemies in arenas, and all units in battlegrounds.
 
====Bug Fixes====
 * Fixed an error that would be thrown if the whisper target ended up evaluating to nil.
 * TellMeWhen now duplicates Blizzard's code for the spell activation overlay (and has some additional code to get this to play nicely with Masque) so that it should hopefully no longer get blamed for tainting your action bars.
 * TellMeWhen also now duplicates Blizzard's code for dropdown menus, and improves upon it slightly. This should also help with taint issues.

===v7.0.2===
====Bug Fixes====
 * Fixed the missing slider value text for the Unit Level condition.
 * The Haste conditions no longer have a hard cap of 100%.
 * Fixed a false error that would display during configuring while using the [Range] DogTag.
 * Fixed an error relating to refreshing the tooltip for non-button widgets.

===v7.0.1===