@@ -12,8 +12,11 @@ TMW.CHANGELOG = {
 [==[]==],
 [==[* New icon type: All-Unit Buffs/Debuffs. This icon type is mainly useful for tracking your multidotting on targets which might not have a unitID that they can be tracked by in a normal Buff/Debuff icon.]==],
 [==[* New icon display method: Vertical Bars.]==],
-[==[* You can now set a rotation amount for a icon's text displays.]==],
+[==[]==],
 [==[* The suggestion list now defers its sorting so that input is more responsive.]==],
+[==[* The suggestion list is now much smarter at suggesting things. For Example, "swp" will now suggestion "Shadow Word: Pain", and "dis ma" will suggest "Dispel Magic".]==],
+[==[]==],
+[==[* You can now set a rotation amount for a icon's text displays.]==],
 [==[* The "Highlight timer edge" setting is back.]==],
 [==[* You can now export all your global groups at once.]==],
 [==[]==],
